<resources>
    <string name="app_name">Gestion des succursales</string>
    <string name="connexion_name">Connexion</string>
    <string name="add_name">Ajout d\'une succursale</string>
    <string name="edit_name">Modification d\'une succursale</string>
    <string name="favorite_name">Succursales favorites</string>
    <string name="budget_name">Affichage du budget d\'une succursale</string>
    <string name="ville">Ville :</string>
    <string name="budget">Budget :</string>
    <string name="btnAjouterVille">Ajouter une ville</string>
    <string name="hint_nomVille">Nom de la ville</string>
    <string name="hint_budget">Budget alloué</string>
    <string name="btnEnregistrer">Enregistrer</string>
    <string name="btnModifier">Modifier</string>
    <string name="btnDeconnexion">Déconnexion</string>
    <string name="btnConnexion">Connexion</string>
    <string name="btnAfficherFavoris">Afficher les favoris</string>
    <string name="btnRecherche">Afficher le budget</string>
    <string name="txt_identifiezVous">Identifiez-vous!</string>
    <string name="txt_Id">Identifiant :</string>
    <string name="txt_mdp">Mot de passe :</string>
    <string name="connexion_attente">En attente de validation…</string>
    <string name="erreur_timeout">Échec de la communication avec le serveur. Réessayez plus tard.</string>
    <string name="erreur_connexion_invalide">Connexion invalide.</string>
    <string name="erreur_ajoutSuccursale_invalide">Ajout de la succursale impossible.</string>
    <string name="erreur_ajoutSuccursale_ville_invalide">La ville doit être composée de 2 à 15 caractères.</string>
    <string name="erreur_ajoutSuccursale_budget_invalide">Le budget doit être un nombre compris entre 500 à 10 000 000.</string>
    <string name="erreur_retraitSuccursale_invalide">La succursale n\'a pas pu être supprimée.</string>
    <string name="erreur_modificationSuccursale_invalide">La succursale n\'a pas pu être modifiée.</string>
    <string name="erreur_afficherBudget_invalide">La succursale n\'existe pas.</string>
    <string name="feedback_ajoutSuccursale_valide">La succursale a été ajoutée.</string>
    <string name="feedback_modificationSuccursale_valide">La succursale a été modifiée.</string>
    <string name="feedback_retraitSuccursale_valide">La succursale a été supprimée.</string>
    <string name="feedback_afficherBudget_valide">Le budget de cette succursale est de %d $.</string>
    <string name="feedback_modifierSuccursaleFav_valide">La modification a été effectuée.</string>
    <string name="feedback_ajoutSuccursaleFav_valide">La succursale a été ajoutée aux favoris.</string>
    <string name="feedback_retraitSuccursaleFav_valide">La succursale a été retirée des favoris.</string>
    <string name="ajout_buget">%d $</string>
    <string name="txt_afficherBudget">Affichage du budget d\'une succursale</string>
    <!-- TODO: Remove or change this placeholder text -->Lava;
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>