<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditSuccursaleFragment">

    <ImageView
        android:id="@+id/imageVilleEdit"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        app:srcCompat="@drawable/ville2" />

    <EditText
        android:id="@+id/idVilleModifiee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_nomVille"
        android:inputType="phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/idBudgetModifie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_budget"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnModifiee"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/gris_bg_projet1"
        android:text="@string/btnModifier"
        android:textColor="@color/bleu_projet1"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>