<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewSuccursaleFragment">

    <ImageView
        android:id="@+id/imageVilleAjout"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        tools:srcCompat="@drawable/ville2" />

    <EditText
        android:id="@+id/idAjoutVille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_nomVille"
        android:inputType="phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/idAjoutBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_budget"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAjout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:backgroundTint="#D0D0D0"
        android:text="@string/btnEnregistrer"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>